...
      child: Card(
        child: Column(
          children: [
            TitleWidget(widget.title),
            ButtonWidget(
              title: "To JWT",
              key: const Key("jwt"),
              result: _jwt,
              onPressed: () async {
                var result = await RSA.convertPrivateKeyToJWK(
                  widget.keyPair.privateKey,
                );
                setState(() {
                  _jwt = jsonEncode(result);
                });
              },
            ),
            ButtonWidget(
              title: "To PKCS1",
              key: const Key("pkcs1"),
              result: _pkcs1,
              onPressed: () async {
                var result = await RSA.convertPrivateKeyToPKCS1(
                  widget.keyPair.privateKey,
                );
                setState(() {
                  _pkcs1 = result;
                });
              },
            ),
            ButtonWidget(
              title: "To PKCS8",
              key: const Key("pkcs8"),
              result: _pkcs8,
              onPressed: () async {
                var result = await RSA.convertPrivateKeyToPKCS8(
                  widget.keyPair.privateKey,
                );
                setState(() {
...
